--- a/zookeeper-recipes/zookeeper-recipes-queue/pom.xml
+++ b/zookeeper-recipes/zookeeper-recipes-queue/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.apache.zookeeper</groupId>
     <artifactId>zookeeper-recipes</artifactId>
-    <version>3.6.2</version>
+    <version>3.6.2-klarrio</version>
   </parent>
 
   <artifactId>zookeeper-recipes-queue</artifactId>
